# Harness

./: .gitignore  README.md  pyproject.toml
harness/: __main__.py  bot.py  default_config.yml  internal_utils.py
harness/components/: config.py  strapon.py
